--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -209,9 +209,6 @@
   justify-content: center;
   overflow: auto;
   grid-gap: 2rem;
-  &::-webkit-scrollbar {
-    display: none;
-  }
   max-height: calc(var(--vh) * 100);
   .imgWrapper {
     background: white;
@@ -240,8 +237,8 @@
 }
 
 ::-webkit-scrollbar {
-  width: 2px;
-  height: 2px;
+  width: 8px;
+  height: 8px;
 }
 ::-webkit-scrollbar-thumb {
   background: rgba(#a2a2a2, 0.44);
@@ -2278,6 +2275,7 @@
   }
 }
 .disputeForm,
+.userReport,
 .ticketReplyFormModal,
 .ticketFormModal {
   max-width: 35rem;
@@ -2312,8 +2310,7 @@
         min-height: 4rem;
       }
       &.btns {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
         button {
           width: max-content;
           padding: 0.7rem 2.5rem;
@@ -2484,194 +2481,6 @@
   }
 }
 
-.profileContainer {
-  padding: 0 3rem;
-  .benner {
-    padding: 1.5rem 0;
-    .profileImg {
-      width: 6.6rem;
-      height: 6.6rem;
-      border-radius: 50%;
-      overflow: hidden;
-      position: relative;
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-      }
-      svg {
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-      }
-      label {
-        position: absolute;
-        bottom: 5px;
-        font-size: 0.9rem;
-        left: 50%;
-        transform: translateX(-50%);
-        color: $blue;
-        font-weight: 500;
-      }
-      input {
-        cursor: pointer;
-        opacity: 0;
-        z-index: 10;
-        position: absolute;
-        left: 0;
-        top: 0;
-        font-size: 100px;
-      }
-    }
-    display: flex;
-    align-items: center;
-    grid-gap: 1.5rem;
-    div {
-      .name {
-        text-transform: capitalize;
-        font-size: 1.3rem;
-        margin-bottom: 0.6rem;
-      }
-      .id {
-        font-size: 0.8rem;
-        color: rgba(0, 0, 0, 0.51);
-      }
-    }
-  }
-  .head {
-    padding: 1rem 0;
-    font-size: 1.4rem;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
-    font-weight: 300;
-    color: rgba(0, 0, 0, 0.75);
-  }
-  .settings {
-    ul {
-      li {
-        padding: 2rem 0;
-        &:not(:last-child) {
-          border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-        }
-        display: flex;
-        align-items: center;
-        .label {
-          flex: 1;
-          max-width: 10rem;
-          font-size: 0.95rem;
-          color: rgba(0, 0, 0, 0.7);
-        }
-        form {
-          flex: 1;
-          display: flex;
-          align-items: center;
-          .currentValue {
-            flex: 1;
-            font-weight: 500;
-          }
-          .inputs {
-            flex: 1;
-            display: grid;
-            grid-gap: 1rem;
-            input {
-              width: 100%;
-              max-width: 20rem;
-              border: none;
-              padding: 0.5rem 0;
-              border-bottom: 1px solid rgba(0, 0, 0, 0.44);
-              outline: none;
-              &:focus {
-                border-color: $blue;
-              }
-            }
-          }
-          .btns {
-            display: grid;
-            align-items: center;
-            width: 8rem;
-            grid-gap: 1rem;
-            button {
-              border: none;
-              outline: none;
-              background: none;
-              color: $blue;
-              cursor: pointer;
-              font-weight: 600;
-              &:hover {
-                opacity: 0.5;
-              }
-            }
-          }
-          .errMsg {
-            margin-top: 1rem;
-            color: $red;
-          }
-        }
-      }
-    }
-  }
-  .methods {
-    margin-top: 2rem;
-    display: grid;
-    grid-gap: 1.5rem;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    li {
-      position: relative;
-      .actions {
-        z-index: 10;
-        display: none;
-        position: absolute;
-        right: 0.5rem;
-        top: 0.5rem;
-        grid-gap: 0.3rem;
-        button {
-          cursor: pointer;
-          color: white;
-          font-weight: 600;
-          padding: 0.25rem 1rem;
-          outline: none;
-          border: 2px solid $blue;
-          border-radius: 2rem;
-          background: $blue;
-          &:hover {
-            background: white;
-            color: $blue;
-          }
-          &.delete {
-            color: white;
-            border-color: $red;
-            background: $red;
-            &:hover {
-              background: white;
-              color: $red;
-            }
-          }
-        }
-      }
-      &:hover {
-        .actions {
-          display: flex;
-        }
-      }
-      .paymentMethod {
-        &:hover {
-          opacity: 1;
-        }
-        height: 100%;
-      }
-    }
-  }
-  .socials {
-    margin-top: 2rem;
-    .providers {
-      display: flex;
-      grid-gap: 1rem;
-      margin-top: 2rem;
-    }
-  }
-  padding-bottom: 8rem;
-}
-
 .modal.confirm {
   border-radius: 0.7rem;
   width: 100%;
@@ -2825,6 +2634,21 @@
       &.active {
         transform: scale(1);
       }
+    }
+  }
+}
+
+.toast {
+  button {
+    border: none;
+    outline: none;
+    background: none;
+    font-weight: 600;
+    font-size: 1rem;
+    color: $blue;
+    cursor: pointer;
+    &:hover {
+      color: $red;
     }
   }
 }
@@ -3230,44 +3054,6 @@
         grid-gap: 1.5rem;
       }
       margin-bottom: 2rem;
-    }
-  }
-  .profileContainer {
-    margin: 0;
-    padding: 1rem 1.5rem;
-    .benner {
-      padding: 0;
-      grid-gap: 1rem;
-      .profileImg {
-        flex-shrink: 0;
-      }
-    }
-    .settings {
-      ul {
-        li {
-          flex-wrap: wrap;
-          grid-gap: 1rem;
-          form {
-            grid-gap: 1rem;
-            flex-basis: 100%;
-            .btns {
-              width: 6rem;
-            }
-          }
-        }
-      }
-    }
-    .paymentMethods {
-      .methods {
-        li {
-          .actions {
-            display: flex;
-          }
-        }
-      }
-    }
-    .socials {
-      margin-bottom: 3rem;
     }
   }
   .modal.editPaymentMethod {
