--- a/client/src/components/styles/generic.scss
+++ b/client/src/components/styles/generic.scss
@@ -123,6 +123,14 @@
   }
 }
 
+.howItWorks {
+  section {
+    img {
+      max-width: 95vw;
+    }
+  }
+}
+
 @media only screen and (max-width: 480px) {
   .generic {
     header {
