--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -320,9 +320,23 @@
           outline: none;
           border-bottom: 2px solid rgba(0, 0, 0, 0.4);
           padding: 0.75rem 1.7rem;
+          padding-right: 3.5rem;
           font-size: 1rem;
           &:focus {
             border-color: $blue;
+          }
+        }
+        a {
+          cursor: pointer;
+          font-weight: 500;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          right: 0rem;
+          color: $blue;
+          &.disabled {
+            color: rgba(0, 0, 0, 0.53);
+            pointer-events: none;
           }
         }
       }
@@ -517,365 +531,6 @@
     }
     p {
       font-size: 1.2rem;
-    }
-  }
-}
-.holdContainer {
-  margin-left: 3rem;
-  .head {
-    z-index: 10;
-    position: sticky;
-    background: white;
-    top: -1rem;
-    padding: 1rem 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 85rem;
-    p {
-      font-weight: 500;
-      font-size: 1.2rem;
-    }
-    .filters {
-      display: none;
-    }
-  }
-  .milestones {
-    max-width: 85rem;
-    display: grid;
-    grid-gap: 0.75rem;
-    .placeholder {
-      border-radius: 0.7rem;
-      padding: 3rem 1rem;
-      background: rgba(0, 0, 0, 0.03);
-      text-align: center;
-      color: rgba(0, 0, 0, 0.5);
-      font-style: italic;
-    }
-    .milestone {
-      background: $lightGreen2;
-      padding: 1rem 1.4rem;
-      border-radius: 0.7rem;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      grid-row-gap: 1rem;
-      .clientDetail {
-        font-size: 0.9rem;
-        .profile {
-          margin-bottom: 1rem;
-          img {
-            height: 2.6rem;
-            width: 2.6rem;
-          }
-        }
-        .milestoneDetail {
-          ul {
-            max-width: 25rem;
-            display: grid;
-            grid-gap: 0.5rem;
-            li {
-              display: grid;
-              grid-template-columns: 6.25rem 1rem 1fr;
-              grid-auto-flow: column;
-              color: rgba(0, 0, 0, 0.79);
-              .role {
-                font-weight: 500;
-              }
-            }
-          }
-        }
-      }
-      .steps {
-        display: flex;
-        align-items: center;
-        margin-bottom: 1rem;
-        .step {
-          position: relative;
-          .icons {
-            display: grid;
-            svg {
-              width: 3.2rem;
-              height: 3.2rem;
-              display: none;
-              grid-column: 1/2;
-              grid-row: 1/2;
-            }
-          }
-          p {
-            position: absolute;
-            white-space: nowrap;
-            font-size: 0.75rem;
-            text-align: center;
-            left: 50%;
-            transform: translate(-50%, 50%);
-            color: rgba(0, 0, 0, 0.6);
-          }
-        }
-        .progress {
-          display: grid;
-          svg {
-            width: 8rem;
-            opacity: 0;
-            margin: auto;
-            grid-column: 1/2;
-            grid-row: 1/2;
-          }
-        }
-        &.pendingRelease,
-        &.inProgress {
-          .pending {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-            .done {
-              opacity: 1;
-            }
-          }
-          .onhold {
-            .icons {
-              .default {
-                display: block;
-              }
-            }
-            .running {
-              opacity: 1;
-            }
-          }
-          .released {
-            .icons {
-              .blank {
-                display: block;
-              }
-            }
-          }
-        }
-        &.released {
-          .pending {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-            .done {
-              opacity: 1;
-            }
-          }
-          .onhold {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-            .done {
-              opacity: 1;
-            }
-          }
-          .released {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-          }
-        }
-        &.pending {
-          .pending {
-            .icons {
-              .default {
-                display: block;
-              }
-            }
-            .running {
-              opacity: 1;
-            }
-          }
-          .onhold {
-            .icons {
-              .blank {
-                display: block;
-              }
-            }
-          }
-          .released {
-            .icons {
-              .blank {
-                display: block;
-              }
-            }
-          }
-        }
-        &.dispute {
-          .pending {
-            .icons {
-              .default {
-                display: block;
-              }
-            }
-            .done {
-              opacity: 1;
-            }
-            .running {
-              opacity: 0;
-            }
-          }
-          .onhold {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-            .done {
-              opacity: 1;
-            }
-          }
-          .released {
-            .icons {
-              .blank {
-                display: block;
-              }
-            }
-          }
-        }
-        &.dispute.inProgress {
-          .onhold {
-            .running {
-              opacity: 0;
-            }
-          }
-        }
-        &.dispute.resolved {
-          .pending {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-            .done {
-              opacity: 1;
-            }
-          }
-          .onhold {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-            .done {
-              opacity: 1;
-            }
-          }
-          .released {
-            .icons {
-              .filled {
-                display: block;
-              }
-            }
-          }
-        }
-      }
-      &.buyer {
-        .steps {
-          &.dispute {
-            .pending {
-              .icons {
-                .default {
-                  display: block;
-                }
-              }
-              .done {
-                opacity: 1;
-              }
-              .running {
-                opacity: 0;
-              }
-            }
-            .onhold {
-              .icons {
-                .filled {
-                  display: block;
-                }
-              }
-              .done {
-                opacity: 1;
-              }
-            }
-            .released {
-              .icons {
-                .blank {
-                  display: block;
-                }
-              }
-            }
-          }
-        }
-      }
-      .clas {
-        text-align: center;
-        display: grid;
-        grid-auto-rows: min-content;
-        min-width: 182px;
-        h4 {
-          font-size: 1.5rem;
-          font-weight: 500;
-          margin-bottom: 0.5rem;
-        }
-        .btns {
-          display: grid;
-          grid-gap: 1rem;
-        }
-        a {
-          display: block;
-          font-weight: 500;
-          color: white;
-          border-radius: 2rem;
-          padding: 0.6rem 2rem;
-          font-size: 0.85rem;
-          background: linear-gradient(
-            138deg,
-            $blue 0%,
-            rgba(34, 71, 148, 1) 130%
-          );
-          &:hover {
-            color: $blue;
-            box-shadow: inset 0 0 0 2px $blue;
-            background: none;
-          }
-          &.dispute {
-            background: linear-gradient(100deg, $blue 0%, $green 130%);
-            &:hover {
-              background: white;
-              color: $green;
-              box-shadow: inset 0 0 0 2px $green;
-              background: none;
-            }
-          }
-          &.released {
-            pointer-events: none;
-            color: $blue;
-            box-shadow: inset 0 0 0 2px $blue;
-            background: none;
-          }
-          &.disputed {
-            pointer-events: none;
-            background: white;
-            color: $pink;
-            box-shadow: inset 0 0 0 2px $pink;
-            background: none;
-          }
-          &.disputeRes {
-            color: white;
-            background: linear-gradient(138deg, $pink 0%, $red 130%);
-            &:hover {
-              background: white;
-              color: $pink;
-              box-shadow: inset 0 0 0 2px $pink;
-            }
-          }
-        }
-      }
     }
   }
 }
@@ -1403,35 +1058,6 @@
     margin: 1.5rem;
     min-width: 25rem;
     box-shadow: none;
-  }
-}
-
-.modal {
-  position: relative;
-  border-radius: 0.7rem;
-  width: 100%;
-  display: grid;
-  overflow: auto;
-  .head {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    background: white;
-    display: flex;
-    justify-content: space-between;
-    padding: 1.3rem;
-    box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.25);
-    border-radius: 0.7rem 0.7rem 0 0;
-    .modalName {
-      color: $blue;
-      font-weight: 500;
-    }
-    button {
-      border: none;
-      outline: none;
-      background: none;
-      cursor: pointer;
-    }
   }
 }
 
@@ -3004,41 +2630,6 @@
       .cvv {
         label {
           margin: 0 !important;
-        }
-      }
-    }
-  }
-  .holdContainer {
-    margin: 0;
-    padding: 1rem;
-    .benner {
-      padding: 0 !important;
-    }
-    .head {
-      top: -1.1rem;
-    }
-    .milestones {
-      margin-bottom: 2rem;
-      .milestone {
-        .steps {
-          display: none;
-        }
-        grid-gap: 1rem;
-        .clientDetail {
-          font-size: 0.8rem;
-          .milestoneDetail {
-            ul {
-              li {
-                grid-template-columns: 5.75rem 1rem 1fr;
-              }
-            }
-          }
-        }
-        .clas {
-          h4 {
-            font-size: 2rem;
-          }
-          margin: auto;
         }
       }
     }
