--- a/client/src/components/styles/elements.scss
+++ b/client/src/components/styles/elements.scss
@@ -243,6 +243,167 @@
   background: none !important;
 }
 
+.modal {
+  position: relative;
+  border-radius: 0.7rem;
+  width: 100%;
+  display: grid;
+  overflow: auto;
+  .head {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.3rem;
+    box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.25);
+    border-radius: 0.7rem 0.7rem 0 0;
+    .modalName {
+      color: $blue;
+      font-weight: 500;
+    }
+    button {
+      border: none;
+      outline: none;
+      background: none;
+      cursor: pointer;
+    }
+  }
+}
+
+.filters {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  grid-gap: 2rem;
+  padding: 1rem 1.5rem;
+  background: rgba(99, 52, 209, 0.1);
+  // box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.17);
+  & > section {
+    grid-gap: 1rem;
+    display: flex;
+    align-items: center;
+    label {
+      font-size: 0.85rem;
+      color: rgba(0, 0, 0, 0.5);
+    }
+    .combobox {
+      input {
+        width: 4rem;
+        padding: 0.2rem 0.5rem;
+      }
+      button {
+        right: 0.5rem;
+      }
+    }
+  }
+  .search {
+    position: relative;
+    flex: 1;
+    & > svg {
+      position: absolute;
+      left: 0.35rem;
+      height: 1.2rem;
+    }
+    input {
+      outline: none;
+      padding: 0.5rem 2rem;
+      width: 100%;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 0.3rem;
+      &:focus {
+        border-color: $blue;
+      }
+    }
+    button {
+      position: absolute;
+      right: 0.5rem;
+      display: grid;
+      outline: none;
+      border: none;
+      background: none;
+      cursor: pointer;
+      svg {
+        height: 1rem;
+        path {
+          fill: rgba(0, 0, 0, 0.3);
+        }
+      }
+      &:hover {
+        svg {
+          path {
+            fill: rgba(0, 0, 0, 0.5);
+          }
+        }
+      }
+    }
+  }
+  .date {
+    grid-gap: 0.5rem;
+    position: relative;
+    border-radius: 4px;
+    padding: 0.4rem 0.5rem;
+    cursor: pointer;
+    svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+    .dates {
+      font-size: 0.75rem;
+    }
+    .clearDateFilter {
+      display: grid;
+      border: none;
+      outline: none;
+      background: none;
+      cursor: pointer;
+      svg {
+        width: 100%;
+        padding: 0.25rem;
+        path {
+          fill: $red;
+        }
+      }
+    }
+    background: rgba(255, 255, 255, 1);
+  }
+}
+
+.paginaiton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-gap: 1rem;
+  margin: 2rem 0;
+  button {
+    display: grid;
+    place-items: center;
+    height: 2rem;
+    width: 2rem;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    outline: none;
+    border-radius: 4px;
+    font-weight: 600;
+  }
+  .pages {
+    display: flex;
+    align-items: center;
+    grid-gap: 1rem;
+    .active {
+      button {
+        background: $blue;
+        color: white;
+      }
+    }
+  }
+}
+
+.modal.datePicker {
+  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.2);
+  width: min-content;
+}
+
 div {
   form + .spinnerContainer {
     z-index: 15;
