--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -24,82 +24,6 @@
       img {
         cursor: pointer;
       }
-      .menu {
-        position: absolute;
-        padding: 1rem;
-        top: 110%;
-        right: 0;
-        background: white;
-        box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
-        border-radius: 0.7rem;
-        display: grid;
-        .link {
-          font-weight: 500;
-          color: $blue;
-          display: inline-block;
-          margin: auto;
-          margin-right: 0;
-          &.settings {
-            display: none;
-          }
-        }
-        .link:not(:last-child) {
-          margin-bottom: 1rem;
-        }
-        button {
-          border: none;
-          outline: none;
-          background: none;
-          font-weight: 500;
-          font-size: 1.2rem;
-          margin-bottom: 0.5rem;
-        }
-        .referral {
-          padding: 0.7rem 0;
-          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-          margin-bottom: 1rem;
-          button {
-            cursor: pointer;
-          }
-          p {
-            font-size: 0.8rem;
-            color: rgba(0, 0, 0, 0.6);
-            white-space: nowrap;
-          }
-        }
-        .logout {
-          border-radius: 0 0 0.7rem 0.7rem;
-          min-width: 10rem;
-          cursor: pointer;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          color: #fc0660;
-          font-size: 1.3rem;
-          font-weight: bold;
-          opacity: 1;
-          margin: -1rem;
-          padding: 1rem;
-          &:hover {
-            background: #fc0660;
-            color: white;
-            svg {
-              path {
-                fill: white;
-              }
-            }
-            // opacity: 0.5;
-          }
-        }
-      }
-    }
-    .backdrop {
-      z-index: 5;
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
     }
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
   }
@@ -210,6 +134,9 @@
   overflow: auto;
   grid-gap: 2rem;
   max-height: calc(var(--vh) * 100);
+  width: auto;
+  border: 1px dashed rgba(255, 255, 255, 0.14);
+  padding: 1rem;
   .imgWrapper {
     background: white;
     padding: 1.5rem;
@@ -220,7 +147,6 @@
     margin: auto;
   }
   .shareBtns {
-    padding-bottom: 2rem;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -232,6 +158,74 @@
       overflow: hidden;
       display: grid;
       place-items: center;
+    }
+  }
+}
+.modal {
+  .menu {
+    padding: 1rem;
+    top: 110%;
+    right: 0;
+    background: white;
+    border-radius: 0.7rem;
+    display: grid;
+    .link {
+      font-weight: 500;
+      color: $blue;
+      display: inline-block;
+      margin: auto;
+      margin-right: 0;
+      &.settings {
+        display: none;
+      }
+    }
+    .link:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+    button {
+      border: none;
+      outline: none;
+      background: none;
+      font-weight: 500;
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    .referral {
+      padding: 0.7rem 0;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      margin-bottom: 1rem;
+      button {
+        cursor: pointer;
+      }
+      p {
+        font-size: 0.8rem;
+        color: rgba(0, 0, 0, 0.6);
+        white-space: nowrap;
+      }
+    }
+    .logout {
+      border-radius: 0 0 0.7rem 0.7rem;
+      min-width: 10rem;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: #fc0660;
+      font-size: 1.3rem;
+      font-weight: bold;
+      opacity: 1;
+      margin: -1rem;
+      padding: 1rem;
+      width: calc(100% + 2rem);
+      &:hover {
+        background: #fc0660;
+        color: white;
+        svg {
+          path {
+            fill: white;
+          }
+        }
+      }
     }
   }
 }
@@ -451,70 +445,109 @@
   }
   align-items: center;
   grid-gap: 1rem;
-  .bell {
-    cursor: pointer;
-    margin-right: 0.5rem;
-    border: none;
-    outline: none;
-    background: none;
-    display: grid;
-    place-items: center;
-    svg {
-      height: 1.3rem;
-      width: 1.3rem;
-      path {
-        fill: rgba(0, 0, 0, 0.5);
+  .actions {
+    button {
+      img {
+        opacity: 0.7;
+        border-radius: 0;
+        height: 1.5rem;
+        width: 1.5rem;
+      }
+      svg {
+        height: 100%;
+        width: 100%;
+        path {
+          fill: rgba(0, 0, 0, 0.5);
+        }
       }
     }
-    &.unread {
-      svg {
-        path {
-          fill: $blue;
+    .bell {
+      &.unread {
+        svg {
+          path {
+            fill: $blue;
+          }
+        }
+      }
+    }
+    &.avatar {
+      height: 3rem;
+      width: 3rem;
+      button {
+        padding: 0;
+        img {
+          height: 3rem;
+          width: 3rem;
+          border-radius: 50%;
+          opacity: 1;
         }
       }
     }
   }
+  .cart {
+    position: relative;
+    .itemCount {
+      pointer-events: none;
+      position: absolute;
+      background: $blue;
+      color: white;
+      font-weight: 500;
+      font-size: 1rem;
+      top: -25%;
+      right: -25%;
+      padding: 0.25rem;
+      border-radius: 7px;
+    }
+  }
+  .bell,
   .name {
     font-size: 1rem;
     font-weight: 500;
     text-transform: capitalize;
-  }
-  .notiWrapper {
-    position: absolute;
-    top: 100%;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
-    border-radius: 0.7rem;
-    right: 80%;
-    max-height: 70vh;
-    overflow: auto;
-    width: 130%;
-    max-width: 100vw;
-    background: white;
-    li {
-      &:not(:last-child) {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-      }
-      position: relative;
-      time {
-        position: absolute;
-        font-size: 0.8rem;
-        right: 1rem;
-        color: rgba(0, 0, 0, 0.5);
-      }
-      .title {
-        font-size: 0.9rem;
-        font-weight: 500;
-      }
-      .body {
-        font-size: 0.8rem;
-        color: rgba(0, 0, 0, 0.6);
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 2;
-        overflow: hidden;
-      }
-      padding: 0.7rem 1rem;
+    .contact {
+      display: block;
+      font-size: 0.8rem;
+      font-weight: 400;
+      color: rgba(0, 0, 0, 0.6);
     }
+  }
+}
+.notiWrapper {
+  top: 100%;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.7rem;
+  right: 80%;
+  max-height: 70vh;
+  overflow: auto;
+  max-width: 23rem;
+  background: white;
+  li {
+    &:not(:last-child) {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    }
+    position: relative;
+    time {
+      position: absolute;
+      font-size: 0.8rem;
+      right: 1rem;
+      color: rgba(0, 0, 0, 0.5);
+    }
+    display: grid;
+    .title {
+      font-size: 0.9rem;
+      font-weight: 500;
+    }
+    .body {
+      width: 100%;
+      font-size: 0.8rem;
+      word-wrap: break-word;
+      color: rgba(0, 0, 0, 0.6);
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      overflow: hidden;
+    }
+    padding: 0.7rem 1rem;
   }
 }
 .homeContainer,
