--- a/client/src/components/styles/marketplace.scss
+++ b/client/src/components/styles/marketplace.scss
@@ -15,7 +15,7 @@
   .products {
     max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 0.5rem;
   }
 }
@@ -68,8 +68,8 @@
 
 .singleProduct {
   display: grid;
-  grid-template-columns: 1fr 20rem;
-  grid-gap: 1.5rem;
+  grid-template-columns: 50rem 30rem;
+  grid-gap: 2.5rem;
   .gallery {
     display: grid;
     grid-gap: 1rem;
@@ -141,6 +141,63 @@
 
 .popupCart,
 .fullCart {
+  .item {
+    padding: 0.5rem;
+    display: flex;
+    grid-gap: 1rem;
+    align-items: center;
+    &:not(:last-child) {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    }
+    &:hover {
+      background: rgba(0, 0, 0, 0.01);
+    }
+    img {
+      width: 5rem;
+      height: 5rem;
+      object-fit: cover;
+    }
+    .detail {
+      flex: 1;
+      display: grid;
+      grid-gap: 0.7rem;
+      .qty {
+        display: flex;
+        grid-gap: 1rem;
+        .addRemove {
+          display: flex;
+          grid-gap: 0.5rem;
+          font-size: 1.1rem;
+          font-weight: 500;
+          button {
+            cursor: pointer;
+            padding: 0.35rem;
+            height: 1.5rem;
+            width: 1.5rem;
+            display: grid;
+            border: none;
+            outline: none;
+            border-radius: 50%;
+            background: none;
+            svg {
+              height: 100%;
+              width: 100%;
+              line {
+                stroke: rgba(0, 0, 0, 0.4);
+              }
+            }
+            &:hover {
+              background: rgba(0, 0, 0, 0.07);
+            }
+          }
+        }
+      }
+    }
+    .price {
+      font-size: 1.2rem;
+      font-weight: 500;
+    }
+  }
   .allCarts {
     display: grid;
     grid-gap: 2rem;
@@ -153,63 +210,6 @@
       .products {
         padding: 1rem;
         border-bottom: 1px solid rgba(0, 0, 0, 0.14);
-        .item {
-          padding: 0.5rem;
-          display: flex;
-          grid-gap: 1rem;
-          align-items: center;
-          &:not(:last-child) {
-            border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-          }
-          &:hover {
-            background: rgba(0, 0, 0, 0.01);
-          }
-          img {
-            width: 5rem;
-            height: 5rem;
-            object-fit: cover;
-          }
-          .detail {
-            flex: 1;
-            display: grid;
-            grid-gap: 0.7rem;
-            .qty {
-              display: flex;
-              grid-gap: 1rem;
-              .addRemove {
-                display: flex;
-                grid-gap: 0.5rem;
-                font-size: 1.1rem;
-                font-weight: 500;
-                button {
-                  cursor: pointer;
-                  padding: 0.35rem;
-                  height: 1.5rem;
-                  width: 1.5rem;
-                  display: grid;
-                  border: none;
-                  outline: none;
-                  border-radius: 50%;
-                  background: none;
-                  svg {
-                    height: 100%;
-                    width: 100%;
-                    line {
-                      stroke: rgba(0, 0, 0, 0.4);
-                    }
-                  }
-                  &:hover {
-                    background: rgba(0, 0, 0, 0.07);
-                  }
-                }
-              }
-            }
-          }
-          .price {
-            font-size: 1.2rem;
-            font-weight: 500;
-          }
-        }
       }
       .total {
         text-align: right;
